Fix project container overflow blocking task editor header in mobile view

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -175,7 +175,7 @@
   margin-top: 36px;
   z-index: 10;
   &--board {
-    overflow-y: hidden;
+   // overflow-y: hidden;
     min-width: 100%;
     &.show-task-editor {
       z-index: 11;
